# audio2srt

./: README.md  README_jp.md  pyproject.toml  replace_terms.csv  whisperv3.py
