[tool.poetry]
name = "audio2srt"
version = "0.1.0"
description = "https://zenn.dev/mossan_hoshi/articles/20241011_faster_whisper_srt"
authors = ["mossan-hoshi <sackn5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper = "^1.0.3"
srt = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
